k8s/gotenberg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg-deployment
  labels:
    app: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8
          ports:
            - containerPort: 3000
