k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
    - host: agendacultural.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
    - host: gotenberg.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotenberg-service
                port:
                  number: 3000
